--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <p class="copy">Copy Rights © 2012 “Коловрат-С” All Rights Reserved</p>
         <div class="molnium flex">
           <p class="text">Разработка и продвижение сайта</p>
-          <a href="http://molnium.ru/" class="molnium-logo"><img src="img/molnium.png" alt="" class="molnium-image"></a>
+          <a href="http://molnium.ru/" class="molnium-logo" target="_blank"><img src="img/molnium.png" alt="" class="molnium-image"></a>
         </div>
       </div>
     </footer>
