--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
         <h2 class="title">НАШИ УСЛУГИ</h2>
         <div class="items flex">
           <div class="item item-1">
-            <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт бытовой техники" data-btext="Заказать" data-from="Услуги - Ремонт бытовой техники">
+            <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт бытовой техники" data-btext="Заказать" data-from="Услуги - Ремонт бытовой техники"
+            data-ltext="
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro laudantium nobis ducimus dolore..</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum sunt, harum dolorum iure, ipsum suscipit. Veniam doloribus voluptatibus, consequuntur harum!</p>
+            ">
               <div class="top flex">
                 <p class="num">1</p>
                 <div class="lines">
@@ -78,7 +83,12 @@
             </a>
           </div>
           <div class="item item-2">
-            <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт цифровой техники" data-btext="Заказать" data-from="Услуги - Ремонт цифровой техники">
+            <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт цифровой техники" data-btext="Заказать" data-from="Услуги - Ремонт цифровой техники"
+            data-ltext="
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro laudantium nobis ducimus dolore..</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum sunt, harum dolorum iure, ipsum suscipit. Veniam doloribus voluptatibus, consequuntur harum!</p>
+            ">
               <div class="top flex">
                 <p class="num">2</p>
                 <div class="lines">
@@ -93,7 +103,12 @@
             </a>
           </div>
           <div class="item item-3">
-            <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт компьютеров" data-btext="Заказать" data-from="Услуги - Ремонт компьютеров">
+            <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт компьютеров" data-btext="Заказать" data-from="Услуги - Ремонт компьютеров"
+            data-ltext="
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro laudantium nobis ducimus dolore..</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum sunt, harum dolorum iure, ipsum suscipit. Veniam doloribus voluptatibus, consequuntur harum!</p>
+            ">
               <div class="top flex">
                 <p class="num">3</p>
                 <div class="lines">
@@ -112,7 +127,7 @@
     </section>
 
 <!-- PORTFOLIO SECTION -->
-    <section class="portfolio-section" id="portfolio">
+    <section class="portfolio-section" id="works">
       <div class="container">
         <h2 class="title">ФОТООТЧЕТЫ ВЫПОЛНЕННЫХ РАБОТ</h2>
         <div class="items flex">
@@ -211,7 +226,7 @@
     <div class="zebra"></div>
 
 <!-- TESTIMONIALS SECTION -->
-    <section class="testimonials-section" id="testimonials">
+    <section class="testimonials-section" id="otzivy">
       <div class="container">
         <h2 class="title">Отзывы</h2>
         <div class="content">
@@ -363,9 +378,8 @@
       <table class="modal_table_2col">
         <tr>
 
-          <td class="left_col">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro laudantium nobis ducimus dolore..</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum sunt, harum dolorum iure, ipsum suscipit. Veniam doloribus voluptatibus, consequuntur harum!</p>
+          <td class="left_col" id="modal_ltext">
+            
           </td>
 
           <td>
