new header contacts

--- a/ver1/index.html
+++ b/ver1/index.html
@@ -5,40 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Коловрат - Ремонт бытовой и цифровой и компьютерной техники во Владикавказе</title>
-	<meta name="yandex-verification" content="913ea22c7baecc78" />
-    <meta name="description" content="Ремонт стиральных машин, холодильников, компьютеров, телефонов и другой техники во Владикавказе" />
-    <meta name="keywords" content="ремонт стиральных машин, ремонт холодильников, ремонт газовых котлов и колонок, ремонт бытовой техники, ремонт микроволновок, ремонт телефонов, ремонт телевизоров, ремонт компьютеров, ремонт цифровой техники, ремонт ноутбуков, компьютерная помощь на дому " />
+    <title>Коловрат</title>
+
     <link rel="icon" type="image/png" href="favicon.png">
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function (d, w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter47696506 = new Ya.Metrika({
-                    id:47696506,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true,
-                    webvisor:true
-                });
-            } catch(e) { }
-        });
 
-        var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function () { n.parentNode.insertBefore(s, n); };
-        s.type = "text/javascript";
-        s.async = true;
-        s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else { f(); }
-    })(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/47696506" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
@@ -57,14 +27,7 @@
       <div class="container flex">
         <h1 class="logo"><a href="/"><img src="img/logo.jpg" alt="Ремонтная организация Коловрат-С" class="logo-img"></a></h1>
         <p class="header-text">Ремонтная организация “Коловрат-С”</p>
-        <div class="header-contact flex">
-          <div class="header-contact_item flex">
-           <img src="img/header_phone_icon.png" alt="" class="phone_img"><a href="tel:89286896370" class="contact phone">8 (909) 474-51-09</a>
-          </div>
-          <div class="header-contact_item flex">
-            <img src="img/header_clock_icon.png" alt="" class="time_img"><a href="tel:89286896370" class="contact time">8:00 - 20:00</a>
-          </div>
-        </div>
+        <a href="tel:89631787756" class="phone">8 (963) 178-77-56</a>
       </div>
     </header>
 
@@ -73,7 +36,7 @@
       <div class="container flex">
         <img src="img/banner-img.png" alt="" class="banner-img">
         <div class="content flex">
-          <h2 class="title">Профессиональные услуги по ремонту бытовой, цифровой и компьютерной техники во Владикавказе</h2>
+          <h2 class="title">Профессиональные услуги по ремонту бытовой и цифровой техники во Владикавказе</h2>
           <div class="items flex">
             <div class="item item-1">
               <img src="img/banner-icon-1.png" alt="" class="item-img">
@@ -104,14 +67,11 @@
           <div class="item item-1">
             <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт бытовой техники" data-btext="Заказать" data-from="Услуги - Ремонт бытовой техники"
             data-ltext="
-			 
             <ul>
-              <li>Cтиральные машины</li>
-              <li>Холодильники</li>
-              <li>Микроволновые печи</li>
-              <li>Газовые котлы и печи</li>
-			  <li>Пылесосы</li>
-			  <li>И многое другое...</li>
+              <li>Lorem ipsum dolor sit. </li>
+              <li>Lorem ipsum dolor sit amet. </li>
+              <li>Lorem ipsum dolor. </li>
+              <li>Lorem ipsum dolor sit amet, consectetur. </li>
             </ul>
             ">
               <div class="top flex">
@@ -130,14 +90,9 @@
           <div class="item item-2">
             <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт цифровой техники" data-btext="Заказать" data-from="Услуги - Ремонт цифровой техники"
             data-ltext="
-             <ul>
-              <li>Смартфоны</li>
-              <li>Телевизоры</li>
-              <li>Планшеты</li>
-              <li>Оргтехника</li>
-			  <li>Аудио и видео аппаратура</li>
-			  <li>И многое другое...</li>
-            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro laudantium nobis ducimus dolore..</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum sunt, harum dolorum iure, ipsum suscipit. Veniam doloribus voluptatibus, consequuntur harum!</p>
             ">
               <div class="top flex">
                 <p class="num">2</p>
@@ -155,14 +110,9 @@
           <div class="item item-3">
             <a href="#" class="item-inner wbh_modal" data-text="Закажи ремонт компьютеров" data-btext="Заказать" data-from="Услуги - Ремонт компьютеров"
             data-ltext="
-            <ul>
-              <li>Ремонт ноутбуков</li>
-              <li>Ремонт мониторов</li>
-              <li>Удаление вирусов</li>
-              <li>Установка и настройка программ</li>
-			  <li>Ремонт аудио и видео аппаратуры</li>
-			  <li>И многое другое...</li>
-            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro laudantium nobis ducimus dolore..</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum sunt, harum dolorum iure, ipsum suscipit. Veniam doloribus voluptatibus, consequuntur harum!</p>
             ">
               <div class="top flex">
                 <p class="num">3</p>
@@ -318,13 +268,13 @@
           <div class="text-slider" id="textSlider">
             
             <div class="text-block">
-              <h3 class="name">Арсен</h3>
+              <h3 class="name">Петр Петрович</h3>
               <div class="divider"></div>
               <p class="text">Мое личное мнение – отличное ремонтное предприятие «Коловрат -С». В квартире жара страшная, духота, а кондиционер сдох - начала капать вода. Позвонил мастерам по ремонту бытовой техники, которые всегда спасают в критические моменты и они за два часа реанимировали подавач холода — починили и почистили.</p>
             </div>
 
             <div class="text-block">
-              <h3 class="name">Тимур Сосланович</h3>
+              <h3 class="name">Александр Тимофеевич</h3>
               <div class="divider"></div>
               <p class="text">Стиральная машинка меня достала — как только закончился гарантийный срок постоянные перебои в работе.Замучался приглашать мастеров. А тут сосед дал телефон «Коловрат -С». Пришел мастер и устранил все неполадки. Нашу стиральную проблему как корова языком слизала — два года стиралка работает и даже ни малейшего намека на сбои. Есть же люди с золотыми руками! Спасибо!</p>
             </div>
@@ -348,7 +298,7 @@
             </div>
 
             <div class="text-block">
-              <h3 class="name">Степан Владимирович</h3>
+              <h3 class="name">Степан Степанович</h3>
               <div class="divider"></div>
               <p class="text">С таким сервисом встретился впервые — мастер «Коловрат -С» прибыл через два часа после вызова.Сам забрал и сам привез после ремонта бытовой прибор. Никаких сбоев в работе не наблюдается. Стоимость услуги тоже приятно удивила.</p>
             </div>
